--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-jq": "^1.3.1",
+    "debug": "^4.1.1",
     "qs": "6.0.0"
   }
 }
